--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
   <main>
     <div class="flex-row">
       <section class="section-block">
-        <img src="https://via.placeholder.com/260x160.png?text=Notre+mission" alt="Notre mission" />
+        <img src="https://github.com/allanbavajee/coeur-ouvert/blob/main/image/MIssoin.png/260x160.png?text=Notre+mission" alt="Notre mission" />
         <h2>Notre mission</h2>
         <p>
           Coeur Ouvert est une plateforme chrétienne dédiée à l’encouragement spirituel 
