--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
   <main>
     <div class="flex-row">
       <section class="section-block">
-        <img src="https://github.com/allanbavajee/coeur-ouvert/blob/main/image/MIssoin.png/260x160.png?text=Notre+mission" alt="Notre mission" />
+        <img src="https://raw.githubusercontent.com/allanbavajee/coeur-ouvert/main/image/MIssoin.png" alt="Notre mission" />
         <h2>Notre mission</h2>
         <p>
           Coeur Ouvert est une plateforme chrétienne dédiée à l’encouragement spirituel 
@@ -212,7 +212,7 @@
       </section>
 
       <section class="section-block">
-        <img src="https://via.placeholder.com/260x160.png?text=Comme+Dieu+te+voit" alt="Comme Dieu te voit" />
+        <img src="https://raw.githubusercontent.com/allanbavajee/coeur-ouvert/main/image/tigre.jpg" alt="Comme Dieu te voit" />
         <h2>Comme Dieu te voit</h2>
         <p>
           Tu es précieux aux yeux de Dieu, créé avec amour et destiné à accomplir de grandes choses. 
@@ -221,7 +221,7 @@
       </section>
 
       <section class="section-block">
-        <img src="https://via.placeholder.com/260x160.png?text=Vivre+avec+gratitude" alt="Vivre avec gratitude" />
+        <img src="https://raw.githubusercontent.com/allanbavajee/coeur-ouvert/main/image/grateful.png" alt="Vivre avec gratitude" />
         <h2>Vivre avec gratitude</h2>
         <p>
           La gratitude transforme notre regard sur la vie, elle ouvre le cœur à la joie et à la paix. 
