--- a/index.html
+++ b/index.html
@@ -79,6 +79,7 @@
     position: relative;
     z-index: 1;
     overflow: visible;
+    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.12); /* Ombre douce verticale au centre */
   }
 
   #daily-verse::before {
