--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@
 <body>
 
   <header>
-    <img src="https://raw.githubusercontent.com/allanbavajee/coeur-ouvert/main/image/logo.coeur.ouvert.png" alt="Logo Coeur Ouvert" class="logo" />
+    <img src="https://github.com/allanbavajee/coeur-ouvert/blob/main/image/image/logo.coeur.ouvert.png" alt="Logo Coeur Ouvert" class="logo" />
     <h1>Coeur Ouvert</h1>
   </header>
 
