--- a/index.html
+++ b/index.html
@@ -1,279 +1,192 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
-<meta charset="UTF-8" />
-<meta name="viewport" content="width=device-width, initial-scale=1" />
-<title>Coeur Ouvert</title>
-<link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Open+Sans&display=swap" rel="stylesheet" />
-<style>
-  :root {
-    --gold-accent: #f5a623;
-    --blue-main: #2a6ebb;
-    --gray-light: #f7f7f7;
-    --text-color: #000000;
-  }
-  * {
-    margin: 0; padding: 0; box-sizing: border-box;
-  }
-  body {
-    font-family: 'Open Sans', sans-serif;
-    background: white;
-    color: var(--text-color);
-    line-height: 1.6;
-  }
-  header {
-    max-width: 900px;
-    margin: 40px auto 10px;
-    padding: 0 20px;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    gap: 15px;
-    flex-wrap: wrap;
-    text-align: center;
-  }
-  header img.logo {
-    height: 70px;
-    flex-shrink: 0;
-  }
-  header h1 {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
-    font-size: 3.2rem;
-    letter-spacing: 2px;
-    color: var(--text-color);
-  }
-  header p.slogan {
-    width: 100%;
-    font-size: 1.2rem;
-    font-style: italic;
-    margin-top: 5px;
-    color: #555;
-  }
-  nav {
-    max-width: 900px;
-    margin: 0 auto 40px;
-    padding: 0 20px;
-  }
-  .menu {
-    list-style: none;
-    display: flex;
-    justify-content: center;
-    gap: 40px;
-  }
-  .menu li a {
-    color: var(--text-color);
-    font-weight: 600;
-    font-size: 1.1em;
-    text-decoration: none;
-    transition: color 0.3s ease;
-  }
-  .menu li a:hover,
-  .menu li a:focus {
-    color: var(--gold-accent);
-    outline: none;
-  }
-  #daily-verse {
-    max-width: 900px;
-    margin: 0 auto 50px;
-    padding: 20px 30px;
-    font-style: italic;
-    font-weight: 400;
-    font-size: 1.4rem;
-    color: #5a2e00;
-    background-image: linear-gradient(to right, white 15%, #FFDB8C 50%, white 85%);
-    border-radius: 12px;
-    font-family: Georgia, serif;
-    text-align: center;
-    position: relative;
-    z-index: 1;
-    box-shadow: 0 8px 15px rgba(0, 0, 0, 0.12);
-  }
-  #daily-verse::before {
-    content: "";
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    width: 60%;
-    height: 80%;
-    pointer-events: none;
-    border-radius: 12px;
-    background: radial-gradient(circle, rgba(255, 206, 102, 0.4) 0%, transparent 70%);
-    z-index: -1;
-  }
-  main {
-    max-width: 900px;
-    margin: 0 auto;
-    padding: 0 20px 60px;
-  }
-  .intro {
-    background: var(--gray-light);
-    border-radius: 12px;
-    padding: 20px;
-    margin-bottom: 40px;
-    text-align: center;
-    box-shadow: 0 4px 12px rgba(0,0,0,0.05);
-  }
-  .intro p {
-    margin-bottom: 15px;
-  }
-  .flex-row {
-    display: flex;
-    justify-content: space-between;
-    gap: 20px;
-    flex-wrap: wrap;
-  }
-  .section-block {
-    background: var(--gray-light);
-    border-radius: 15px;
-    padding: 15px;
-    flex: 1 1 28%;
-    box-shadow: 0 6px 15px rgb(0 0 0 / 0.05);
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-  }
-  .section-block h2 {
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 700;
-    font-size: 1.6rem;
-    margin-bottom: 10px;
-    color: var(--text-color);
-    text-align: center;
-  }
-  .section-block img {
-    width: 100%;
-    max-width: 260px;
-    border-radius: 12px;
-    object-fit: contain;
-    margin-bottom: 10px;
-    height: auto;
-  }
-  .section-block p {
-    font-weight: 400;
-    font-size: 1rem;
-    color: #222;
-    line-height: 1.5;
-    text-align: center;
-    margin-top: auto;
-  }
-  footer {
-    text-align: center;
-    padding: 20px 0;
-    color: #666;
-    font-size: 0.9rem;
-  }
-  footer a {
-    color: var(--blue-main);
-    text-decoration: none;
-  }
-  footer a:hover {
-    text-decoration: underline;
-  }
-  @media (max-width: 900px) {
-    .section-block {
-      flex: 1 1 45%;
-      margin-bottom: 30px;
-    }
-  }
-  @media (max-width: 600px) {
-    header {
-      flex-direction: column;
-      gap: 10px;
-    }
-    header h1 {
-      font-size: 2.4rem;
-    }
-    nav {
-      padding: 0 10px;
-    }
-    .menu {
-      gap: 20px;
-      flex-wrap: wrap;
-      justify-content: center;
-    }
-    .section-block {
-      flex: 1 1 100%;
-      margin-bottom: 30px;
-      max-width: 100%;
-    }
-  }
-</style>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Plateforme d'Encouragement & Coaching Spirituel</title>
+    <!-- Google Fonts -->
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600;700&display=swap" rel="stylesheet">
+    <!-- FontAwesome Icons -->
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <style>
+        /* Reset */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+
+        body {
+            font-family: 'Poppins', sans-serif;
+            background-color: #fdfdfd;
+            color: #333;
+            line-height: 1.6;
+        }
+
+        header {
+            background: linear-gradient(to right, #5a8dee, #7cb8ff);
+            color: white;
+            text-align: center;
+            padding: 2.5rem 1rem;
+            animation: fadeIn 1s ease-in-out;
+        }
+
+        header h1 {
+            font-size: 2.5rem;
+            margin-bottom: 0.5rem;
+            font-weight: 700;
+        }
+
+        header p {
+            font-size: 1.2rem;
+            font-weight: 300;
+        }
+
+        section {
+            padding: 3rem 1rem;
+            max-width: 1000px;
+            margin: auto;
+            animation: fadeIn 1.2s ease-in-out;
+        }
+
+        h2 {
+            color: #5a8dee;
+            text-align: center;
+            margin-bottom: 1.5rem;
+            font-weight: 600;
+        }
+
+        .services {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 1.5rem;
+        }
+
+        .service-card {
+            background: white;
+            padding: 2rem;
+            border-radius: 12px;
+            box-shadow: 0 4px 10px rgba(0,0,0,0.05);
+            text-align: center;
+            transition: transform 0.3s, box-shadow 0.3s;
+        }
+
+        .service-card:hover {
+            transform: translateY(-5px);
+            box-shadow: 0 6px 15px rgba(0,0,0,0.1);
+        }
+
+        .service-card i {
+            font-size: 2rem;
+            color: #f4b400;
+            margin-bottom: 1rem;
+        }
+
+        .btn {
+            display: inline-block;
+            background: #5a8dee;
+            color: white;
+            padding: 0.7rem 1.5rem;
+            border-radius: 25px;
+            text-decoration: none;
+            transition: background 0.3s;
+        }
+
+        .btn:hover {
+            background: #4172c7;
+        }
+
+        /* Animations */
+        @keyframes fadeIn {
+            from {opacity: 0; transform: translateY(15px);}
+            to {opacity: 1; transform: translateY(0);}
+        }
+
+        /* Contact form */
+        form {
+            display: grid;
+            gap: 1rem;
+            max-width: 600px;
+            margin: auto;
+        }
+
+        input, textarea {
+            padding: 0.8rem;
+            border: 1px solid #ddd;
+            border-radius: 8px;
+            font-size: 1rem;
+        }
+
+        textarea {
+            resize: none;
+            height: 120px;
+        }
+
+        button {
+            background: #f4b400;
+            color: white;
+            padding: 0.8rem;
+            border: none;
+            border-radius: 25px;
+            font-size: 1rem;
+            cursor: pointer;
+            transition: background 0.3s;
+        }
+
+        button:hover {
+            background: #d89f00;
+        }
+
+        footer {
+            background: #f5f5f5;
+            text-align: center;
+            padding: 1rem;
+            font-size: 0.9rem;
+            color: #666;
+        }
+    </style>
 </head>
 <body>
 
-  <header>
-    <img src="https://raw.githubusercontent.com/allanbavajee/coeur-ouvert/main/image/logo.coeur.ouvert.png" alt="Logo Coeur Ouvert" class="logo" />
-    <h1>Coeur Ouvert</h1>
-    <p class="slogan">Un espace pour parler, être écouté, et retrouver l’espoir</p>
-  </header>
+<header>
+    <h1>Plateforme d'Encouragement & Coaching Spirituel</h1>
+    <p>Un lieu pour trouver espoir, foi et soutien.</p>
+</header>
 
-  <nav>
-    <ul class="menu">
-      <li><a href="index.html">Accueil</a></li>
-      <li><a href="coaching.html">Coaching Spirituel</a></li>
-      <li><a href="ressources.html">Ressources</a></li>
-      <li><a href="temoignages.html">Témoignages</a></li>
-    </ul>
-  </nav>
-
-  <div id="daily-verse">Chargement du verset...</div>
-
-  <main>
-    <div class="intro">
-      <p><strong>Tu es une personne de valeur.</strong></p>
-      <p>Nous savons que la vie peut être lourde, pleine de blessures, de doutes et de questions sans réponse.</p>
-      <p>Coeur Ouvert est un espace où tu peux déposer tes fardeaux, partager ce que tu vis et trouver des réponses qui restaurent ton cœur.</p>
-      <p>Nous t’accompagnons grâce à l’écoute bienveillante de nos conseillers, la prière, les paroles d’encouragement et les témoignages réels de transformation.</p>
+<section>
+    <h2>Nos Services</h2>
+    <div class="services">
+        <div class="service-card">
+            <i class="fas fa-bible"></i>
+            <h3>Encouragement Biblique</h3>
+            <p>Recevez chaque jour un verset et une parole pour fortifier votre foi.</p>
+        </div>
+        <div class="service-card">
+            <i class="fas fa-hand-holding-heart"></i>
+            <h3>Coaching Spirituel</h3>
+            <p>Accompagnement personnalisé pour votre croissance spirituelle.</p>
+        </div>
+        <div class="service-card">
+            <i class="fas fa-users"></i>
+            <h3>Témoignages</h3>
+            <p>Découvrez des histoires de transformation inspirantes.</p>
+        </div>
     </div>
+</section>
 
-    <div class="flex-row">
-      <section class="section-block">
-        <h2>Notre mission</h2>
-        <img src="https://raw.githubusercontent.com/allanbavajee/coeur-ouvert/main/image/MIssoin.png" alt="Notre mission" />
-        <p>Faire découvrir l’amour de Dieu, non pour imposer une religion, mais pour restaurer la relation entre Dieu et l’homme.</p>
-      </section>
+<section>
+    <h2>Contactez-nous</h2>
+    <form>
+        <input type="text" placeholder="Votre nom" required>
+        <input type="email" placeholder="Votre email" required>
+        <textarea placeholder="Votre message..." required></textarea>
+        <button type="submit">Envoyer</button>
+    </form>
+</section>
 
-      <section class="section-block">
-        <h2>Comme Dieu te voit</h2>
-        <img src="https://raw.githubusercontent.com/allanbavajee/coeur-ouvert/main/image/tigre.jpg" alt="Comme Dieu te voit" />
-        <p>Tu es précieux aux yeux de Dieu, créé avec amour et destiné à accomplir de grandes choses. Ne doute jamais de ta valeur.</p>
-      </section>
-
-      <section class="section-block">
-        <h2>Vivre avec gratitude</h2>
-        <img src="https://raw.githubusercontent.com/allanbavajee/coeur-ouvert/main/image/grateful.png" alt="Vivre avec gratitude" />
-        <p>La gratitude transforme notre regard sur la vie, elle ouvre le cœur à la joie et à la paix.</p>
-      </section>
-    </div>
-  </main>
-
-  <footer>
-    &copy; 2025 Coeur Ouvert — <a href="contact.html">Contact</a>
-  </footer>
-
-  <script>
-    document.addEventListener("DOMContentLoaded", function () {
-      fetch("verses.json")
-        .then(response => {
-          if (!response.ok) throw new Error("Erreur lors du chargement du fichier JSON");
-          return response.json();
-        })
-        .then(data => {
-          let today = new Date();
-          let dayOfYear = Math.floor((today - new Date(today.getFullYear(), 0, 0)) / 86400000);
-          let verseIndex = dayOfYear % data.length;
-          document.getElementById("daily-verse").textContent =
-            data[verseIndex].reference + " - " + data[verseIndex].texte;
-        })
-        .catch(error => {
-          console.error(error);
-          document.getElementById("daily-verse").textContent =
-            "Impossible de charger le verset du jour.";
-        });
-    });
-  </script>
+<footer>
+    <p>&copy; 2025 Plateforme d'Encouragement & Coaching Spirituel - Tous droits réservés</p>
+</footer>
 
 </body>
 </html>
